--- a/about.html
+++ b/about.html
@@ -20,20 +20,12 @@
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo">Sobre mim</h1>
-            <p class="apresentacao__conteudo__texto">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti
-                atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident,
-                similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.
+            <p class="apresentacao__conteudo__texto">Olá, me chamo Matheus Chagas de Moraes Sampaio, tenho 18 anos.
             </p>
             <p class="apresentacao__conteudo__texto">
-                Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est
-                eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas
-                assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum
-                necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum
-                rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut
-                perferendis doloribus asperiores ipsum delis forum birol parela maxime infena. Excepteur sint occaecat
-                cupidatat non.</p>
+                Eu sempre tive bastante afinidade com tecnologia, comecei a estudar programação aos 15 anos e comecei a gostar bastante. Comecei com um curso particular, aprendendo a lógica de programação com portugol. A partir do Potugol passei para a linguagem Java,aprendi sobre a JVM(Java Virtal Machine) e as diferenças de linguagem interpretada e compilada, tenho conhecimento em programação orientada a objetos, estruturas de dados, lógica de programação. Atualmente, cursando <Strong>ADS(Análise e Desenvolvimento de Sistemas)</Strong> na FIAP. Aprendendo HTML,CSS, JavaScript, Banco de Dados e ChatBot, e aprimorando a lógica em Python e Java </p>
         </section>
-        <img class="apresentacao__imagem" src="./assets/imagem.png" alt="Foto da Joana Santos programando">
+        <img class="apresentacao__imagem" src="./assets/Imagem_minha.png" alt="Foto de Matheus">
     </main>
 
     <footer class="rodape">
