--- a/index.html
+++ b/index.html
@@ -21,28 +21,24 @@
             <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro nível<strong 
             class="titulo-destaque">com um Front-end de qualidade!
             </strong></h1>
-            <p class="apresentacao__conteudo__texto">Olá! Sou Joana Santos, desenvolvedora
-            Front-end com especialidade em React, HTML e
-            CSS. Ajudo pequenos negócios e designers a
-            colocarem em prática boas ideias. Vamos
-            conversar?</p>
+            <p class="apresentacao__conteudo__texto">Olá! Me chamo Matheus, estudante do curso de ADS(Análise e Desenvolvimento de sistemas), aprendendo FrontEnd | BackEnd | DataBase | ChatBot</p>
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links__subtitulo">Acesse minhas redes</h2>
-                <a class="apresentacao__links__navegacao" href="https://github.com/rafaballerini">
+                <a class="apresentacao__links__navegacao" href="https://github.com/matheusCMSampaio">
                     <img src="./assets/github.png">
                     Github
                 </a>
-                <a class="apresentacao__links__navegacao" href="https://linkedin.com/in/rafaellaballerini">
+                <a class="apresentacao__links__navegacao" href="https://www.linkedin.com/in/matheus-chagas-3b9370257/">
                     <img src="./assets/linkedin.png">
                     linkedin
                 </a>
-                <a class="apresentacao__links__navegacao" href="https://twitch.tv/guilimadev">
+                <a class="apresentacao__links__navegacao" href="https://www.twitch.tv/thewhitewolf1224">
                     <img src="./assets/twitch.png">
                     Twitch
                 </a>
             </div>
         </section>
-        <img class="apresentacao__imagem" src="./assets/imagem.png" alt="Foto da Joana Santos programando">
+        <img class="apresentacao__imagem" src="./assets/Imagem_minha.png" alt="Foto de Matheus">
     </main>
     <footer class="rodape">
         <p>Desenvolvido por Alura.</p>
